--- a/pj/app/src/main/res/layout/fragment_orders.xml
+++ b/pj/app/src/main/res/layout/fragment_orders.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -20,6 +21,18 @@
             android:textColor="@color/white"
             android:textAlignment="center" />
     </LinearLayout>
+
+    <!-- Status Tabs -->
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/order_status_tabs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/amber_600"
+        android:elevation="4dp"
+        app:tabTextColor="@color/white"
+        app:tabSelectedTextColor="@color/white"
+        app:tabIndicatorColor="@color/white"
+        app:tabIndicatorHeight="3dp" />
 
     <!-- Empty State -->
     <TextView
